<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">
    <TextView
        android:id="@+id/person_headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="40dp"
        android:text="@string/person_headline"
        android:background="#3299CC"
        ></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/person_left_linearlayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="vertical">

            <TextView
                android:id="@+id/person_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_name_title"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/person_balance_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_balance_title"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/person_ability_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_ability_title"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/person_credit_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_credit_title"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/person_releseDegree_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_releseDegree_title"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/person_right_linearlayouat"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left"
            android:orientation="vertical">

            <TextView
                android:id="@+id/person_name_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_name_content" />

            <TextView
                android:id="@+id/person_balance_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_balance_content" />

            <TextView
                android:id="@+id/person_ability_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_ability_content" />

            <TextView
                android:id="@+id/person_credit_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_credit_content" />

            <TextView
                android:id="@+id/person_releaseDegree_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_releseDegree_content" />

        </LinearLayout>
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"></LinearLayout>
    <RelativeLayout
        android:id="@+id/person_bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Button
            android:id="@+id/person_add_button"
            android:layout_width="wrap_content"
            android:layout_height="59dp"
           android:layout_alignParentRight="true"
            android:text="@string/person_add_button"
            android:background="#3299CC"/>
    </RelativeLayout>

</LinearLayout>