<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
<TextView android:id="@+id/home_listview_item_headline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/home_fragment_item_content_headline"
    android:textSize="20dp"
    android:layout_gravity="center"></TextView>
    <LinearLayout
        android:id="@+id/home_listview_item_content_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/home_listview_item_content_layout_image"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/listview_item_image1"/>
            <TextView
                android:id="@+id/home_listview_item_content_layout_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_listview_item_content_layout_username"
                android:layout_gravity="center"
                />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/home_listview_item_short_conent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_listview_item_short_conent"
                android:layout_alignParentTop="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/home_listview_item_short_cost"
                android:layout_alignParentBottom="true"
                android:text="@string/home_listview_item_short_cost"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/home_listview_item_short_comletion_degree"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:text="@string/home_listview_item_short_comletion_degree"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
