<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   >
    <LinearLayout
        android:id="@+id/publish_content_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/publish_content_layout_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/listview_item_image1"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/publish_content_layout_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/home_listview_item_content_layout_username"
                android:textColor="#000000"/>
        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/publish_left_LinearLayout"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/publish_headline_title"
                android:text="@string/publish_headline_title"
                android:layout_gravity="right"
                android:textColor="#000000"
                android:textSize="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/publish_place_title"
                android:text="@string/home_item_show_place_title"
                android:layout_gravity="right"
                android:textColor="#000000"
                android:textSize="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/publish_place_deadline"
                android:text="@string/home_item_show_deadline_title"
                android:layout_gravity="right"
                android:textColor="#000000"
                android:textSize="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:id="@+id/publish_describe_title"
                android:text="@string/home_item_show_describe_title"
                android:layout_gravity="right"
                android:textColor="#000000"
                android:textSize="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/publish_level_title"
                android:text="@string/home_item_show_level_title"
                android:layout_gravity="right"
                android:textColor="#000000"
                android:textSize="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/publish_demandNumber_title"
                android:text="@string/home_item_show_demandNumber_title"
                android:layout_gravity="right"
                android:textColor="#000000"
                android:textSize="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/publish_degree_title"
                android:text="@string/home_item_show_degree_title"
                android:layout_gravity="right"
                android:textColor="#000000"
                android:textSize="15dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/publish_right_LinearLayout"
            android:orientation="vertical">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/publish_headline_content"
                android:hint="@string/publish_edittext_hint"
                android:maxLines="1"
                android:background="#00000000"
                android:textSize="15dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/publish_place_content"
                android:hint="@string/publish_edittext_hint"
                android:textSize="15dp"
                android:maxLines="1"
                android:background="#00000000"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/publish_place_deadline_content"
                android:hint="@string/publish_edittext_hint"
                android:maxLines="1"
                android:background="#00000000"
                android:textSize="15dp"
                />

            <EditText
                android:id="@+id/publish_describe_content"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:hint="@string/publish_edittext_hint"
                android:maxLines="5"
                android:background="#00000000"
                android:textSize="15dp"/>

            <EditText
                android:id="@+id/publish_level_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:hint="@string/publish_edittext_hint"
                android:maxLines="1"
                android:textSize="15dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/publish_demandNumber_content"
                android:hint="@string/publish_edittext_hint"
                android:maxLines="1"
                android:background="#00000000"
                android:textSize="15dp"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/publish_degree_content"
                android:maxLines="1"
                android:background="#00000000"
                android:textSize="15dp"
                android:hint="@string/publish_edittext_hint"/>
        </LinearLayout>

    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"></LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/publish_button"
            android:text="@string/publish_button"
            android:layout_gravity="right"
            android:background="#3299CC" />
    </LinearLayout>
</LinearLayout>
