<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CDCDCDCD"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.example.yyyyyyyyyyyyyyyyyyyy.orange.RegisterActivity">
    <ImageView
        android:id="@+id/register_imageView1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/head_portrait"
        />

    <EditText
        android:id="@+id/register_usernameet"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:background="@drawable/white"
        android:inputType="textPersonName"
        android:gravity="center"
        android:textColor="#6A6A6C"
        android:hint="@string/usernamehintcontent"
        android:textColorHint="#A8A8A8"
        android:layout_below="@+id/register_imageView1"
        android:layout_alignParentStart="true">
    </EditText>

    <EditText
        android:id="@+id/register_passwordet"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:background="@drawable/white"
        android:inputType="textPassword"
        android:gravity="center"
        android:textColor="#6A6A6C"
        android:hint="@string/passwordhintcontent"
        android:textColorHint="#A8A8A8"
        android:layout_below="@+id/register_usernameet"
        android:layout_alignParentStart="true">
    </EditText>
    <Button
        android:id="@+id/register_registerbt"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/blue"
        android:text="@string/loginbtcontent"
        android:gravity="center"
        android:textColor="#F9FAFB"
        android:layout_below="@+id/register_passwordet"
        android:layout_alignParentStart="true"
        android:layout_marginTop="37dp" />
</RelativeLayout>
